# ellipse_tangent

./: Cargo.toml  README.md  run.sh
.cargo/: config.toml
.github/workflows/: android.yml  linux.yml
android/avd/2.7_QVGA_API_23.avd/: config.ini
benches/: benchmark.rs
examples/simulator/: Cargo.toml
examples/simulator/src/: main.rs  md_array.rs  plot.rs
scripts/: run-on-android.sh
src/: ellipse.rs  find_roots.rs  lib.rs  line.rs  main.rs  md_array.rs  plot.rs  utils.rs
