[package]
name = "ellipse_tangent"
version = "0.0.1"
edition = "2021"

[dependencies]
num-traits = "0.2.18"
roots = "0.0.8"
find-real-roots-of-polynomial = "0.2.1"
polynomial-ring = "0.5.0"
num = "0.4.1"
rustnomial = { path = "../rustnomial" }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "benchmark"
harness = false

[workspace]
members = [ "examples/simulator" ]
